--- a/backend/views/respose.ejs
+++ b/backend/views/respose.ejs
@@ -24,7 +24,7 @@
         <input type="hidden" name="prefill[contact]" value=<%= data[1] %>>
         <input type="hidden" name="prefill[email]" value=<%= data[2] %>>
         <input type="hidden" name="notes[shipping address]" value="L-16, The Business Centre, 61 Wellfield Road, New Delhi - 110001">
-        <input type="hidden" name="callback_url" value="http://localhost:5000/callback">
+        <input type="hidden" name="callback_url" value="/callback">
       <input type="hidden" name="cancel_url" value="https://example.com/payment-cancel">
     
       </form>
